# git-practice

./: .gitignore  README.md  main.py  pyproject.toml
data/: eng_names.txt  rus_names.txt
src/: calculate_taxes.py  get_name_list.py
tests/: conftest.py  test_calculate_taxes.py
